--- a/quote_machine/index.html
+++ b/quote_machine/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1.0" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <script type="text/javascript" src="js/actions.js">
+
+  </script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <meta charset="utf-8">
   <title>Quote Machine</title>
@@ -26,7 +29,7 @@
         <button id="getMessage" class="animated bounceInUp">
             Click for new Quote
           </button>
-          <button class="animated bounceInUp">
+        <button class="animated bounceInUp">
             <a class="twitter-share-button" id="twitterButton" data-size="small">Tweet</a>
           </button>
 
@@ -38,40 +41,3 @@
 </body>
 
 </html>
-
-<script>
-  $(document).ready(function() {
-    var neatoAnimation = "animated jello";
-    var animationEnd = 'webkitAnimationEnd mozAnimationEnd MSAnimationEnd oanimationend animationend';
-    //jquery triggered on button click
-    $("#getMessage").on("click", function() {
-      //grabs json from api this is the api
-      $.getJSON("https://talaikis.com/api/quotes/random/", function(data) {
-        //declare html variable to put json on to in html formatted way
-        var html = "";
-        //use key and value from json object format to html add to html variable
-        $.each(data, function(key, val) {
-          html += "<div class='quote'>";
-          html += val + "<br>";
-          html += "<div><br>";
-        })
-
-        //tell html var where and how to opened using html jsquery method
-
-        $(".message").html(html);
-        $(".message").addClass(neatoAnimation).one(animationEnd,
-          function() {
-            $(this).removeClass(neatoAnimation)
-          });
-      });
-    });
-
-
-    $("#twitterButton").on("click", function() {
-      var textToTweet = $(".quote").text();
-
-      var tweetLink = "https://twitter.com/intent/tweet?text=" + encodeURIComponent(textToTweet);
-      window.open(tweetLink, "_blank");
-    })
-  });
-</script>
