on page load gets longitude and latitude builds apiurl calls json, waits before callin json, does not display json nicely yet

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -13,6 +13,7 @@
   <body>
     <p>Click the button to get your coordinates</p>
     <button id="getLocation">Try it</button>
+    <button id="actGlobally">Act Globally</button>
 
     <div class="demo">
 
