added default unit position, checkbox to change units, and another unit option, I have not implemented the ability to change the units

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -14,6 +14,15 @@
     <p>Click the button to get your coordinates</p>
     <button id="getLocation">Try it</button>
     <button id="actGlobally">Act Globally</button>
+    <br>
+    <br>
+
+
+<div class="switch">
+  <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-yes-no" type="checkbox">
+  <label for="cmn-toggle-7" data-on="&#176C" data-off="&#176F"></label>
+</div>
+
 
     <div class="demo">
 
