--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -1,16 +1,73 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <!--
     <script type="text/javascript" src="js/actions.js"></script>
-    <meta charset="utf-8">
-    <meta name="description" content="FreeCodeCamp Challenge using APIs">
-    <meta name="author" content="Reed MacConnell">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Local Weather</title>
-  </head>
-  <body>
+-->
+  <meta charset="utf-8">
+  <meta name="description" content="FreeCodeCamp Challenge using APIs">
+  <meta name="author" content="Reed MacConnell">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Local Weather</title>
+</head>
+
+<body>
+  <div id="main">
+    <header class="header">
+      <h1 id="city">Fuck</h1>
+      <h4 id="time">12:12 PM</h4> |
+      <h4 id="condition">Scattered Showers</h4>
+    </header>
+
+    <div id="bottom">
+      <div class="fiveDay">
+        day
+        icon
+        high/low
+
+      </div>
+      <div class="fiveDay">
+        day
+        icon
+        high/low
+
+      </div>
+      <div class="fiveDay">
+        day
+        icon
+        high/low
+
+      </div>
+      <div class="fiveDay">
+        day
+        icon
+        high/low
+
+      </div>
+      <div class="fiveDay">
+        day
+        icon
+        high/low
+
+      </div>
+
+    </div>
+
+  </div>
+
+
+
+
+
+
+
+
+
+
+  <!--
     <p>Click the button to get your coordinates</p>
     <button id="getLocation">Try it</button>
     <button id="actGlobally">Act Globally</button>
@@ -27,6 +84,7 @@
     <div class="demo">
 
     </div>
+-->
+</body>
 
-  </body>
 </html>
