added a lot more structure to the project, the time and temp are live, I am trying to figure out the best way to do the 5 day forcast and to add icons

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -16,40 +15,76 @@
 <body>
   <div id="main">
     <header class="header">
-      <h1 id="city">Fuck</h1>
-      <h4 id="time">12:12 PM</h4> |
+      <h1 id="city"></h1>
+      <br>
+      <h4 id="time"></h4> |
       <h4 id="condition">Scattered Showers</h4>
     </header>
+    <div id="temp">
+      <h1></h1>
+    </div>
+
+
 
     <div id="bottom">
       <div class="fiveDay">
-        day
-        icon
-        high/low
+        <div class="day">
+          monday
+        </div>
+        <div class="icon">
+          pic
+        </div>
+        <div class="highLow">
+          78/56
+        </div>
 
       </div>
       <div class="fiveDay">
-        day
-        icon
-        high/low
+        <div class="day">
+          monday
+        </div>
+        <div class="icon">
+          pic
+        </div>
+        <div class="highLow">
+          78/56
+        </div>
 
       </div>
       <div class="fiveDay">
-        day
-        icon
-        high/low
+        <div class="day">
+          monday
+        </div>
+        <div class="icon">
+          pic
+        </div>
+        <div class="highLow">
+          78/56
+        </div>
 
       </div>
       <div class="fiveDay">
-        day
-        icon
-        high/low
+        <div class="day">
+          monday
+        </div>
+        <div class="icon">
+          pic
+        </div>
+        <div class="highLow">
+          78/56
+        </div>
 
       </div>
       <div class="fiveDay">
-        day
-        icon
-        high/low
+        <div class="day">
+          monday
+        </div>
+        <div class="icon">
+          pic
+        </div>
+        <div class="highLow">
+          78/56
+        </div>
 
       </div>
 
