corrected if statement for minutes

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -16,6 +16,10 @@
   <div id="main">
     <header class="header">
       <h1 id="city"></h1>
+      <div class="switch">
+        <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-yes-no" type="checkbox">
+        <label for="cmn-toggle-7" data-on="Yes" data-off="No"></label>
+      </div>
       <br>
       <h4 id="time"></h4> |
       <h4 id="condition">Scattered Showers</h4>
