swtiches between imperial and metric on click, resets city, time and url to accomplish this

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -15,11 +15,14 @@
 <body>
   <div id="main">
     <header class="header">
-      <h1 id="city"></h1>
-      <div class="switch">
-        <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-yes-no" type="checkbox">
-        <label for="cmn-toggle-7" data-on="Yes" data-off="No"></label>
+      <div class="cityandswitch">
+        <h1 id="city"></h1>
+        <div class="switch">
+          <input id="cmn-toggle" class="cmn-toggle cmn-toggle-c-f" type="checkbox">
+          <label for="cmn-toggle" data-on="&#176C" data-off="&#176F"></label>
+        </div>
       </div>
+
       <br>
       <h4 id="time"></h4> |
       <h4 id="condition">Scattered Showers</h4>
@@ -114,7 +117,7 @@
 
 
 <div class="switch">
-  <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-yes-no" type="checkbox">
+  <input id="cmn-toggle-7" class="cmn-toggle cmn-toggle-c-f" type="checkbox">
   <label for="cmn-toggle-7" data-on="&#176C" data-off="&#176F"></label>
 </div>
 
