added icons, humidity and windspeed

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -25,72 +25,58 @@
 
       <br>
       <h4 id="time"></h4> |
-      <h4 id="condition">Scattered Showers</h4>
+      <h4 id="condition"></h4>
     </header>
     <div id="temp">
       <h1></h1>
+      <div id="fire">
+        <img src="">
+      </div>
     </div>
 
-
-
     <div id="bottom">
-      <div class="fiveDay">
+      <div class="weatherInfo">
         <div class="day">
-          monday
+          <strong>Humidity</strong>
         </div>
-        <div class="icon">
-          pic
+        <div class="number humidity">
+
         </div>
-        <div class="highLow">
-          78/56
+      </div>
+      <div class="weatherInfo">
+        <div class="day">
+          <strong>Wind</strong>
+        </div>
+        <div class="number windSpeed">
         </div>
 
       </div>
-      <div class="fiveDay">
+      <div class="weatherInfo">
         <div class="day">
           monday
         </div>
-        <div class="icon">
+        <div class="number">
           pic
-        </div>
-        <div class="highLow">
-          78/56
         </div>
 
-      </div>
-      <div class="fiveDay">
-        <div class="day">
-          monday
-        </div>
-        <div class="icon">
-          pic
-        </div>
-        <div class="highLow">
-          78/56
-        </div>
 
       </div>
-      <div class="fiveDay">
+      <div class="weatherInfo">
         <div class="day">
           monday
         </div>
-        <div class="icon">
+        <div class="number">
           pic
-        </div>
-        <div class="highLow">
-          78/56
         </div>
 
+
       </div>
-      <div class="fiveDay">
+      <div class="weatherInfo">
         <div class="day">
           monday
         </div>
-        <div class="icon">
+        <div class="number">
           pic
-        </div>
-        <div class="highLow">
-          78/56
         </div>
 
       </div>
