shorten temp to 1 decimal, added icon & different color for 18 different weather types, added additional api to call from to correct sunrise sunset bug

--- a/local_weather/index.html
+++ b/local_weather/index.html
@@ -29,12 +29,23 @@
     </header>
     <div id="temp">
       <h1></h1>
-      <div id="fire">
+      <div id="wicon">
         <img src="">
       </div>
     </div>
 
     <div id="bottom">
+      <div class="weatherInfo">
+        <div class="day">
+          <strong>Sunrise</strong>
+
+        </div>
+        <div class="number sunrise">
+          pic
+        </div>
+
+
+      </div>
       <div class="weatherInfo">
         <div class="day">
           <strong>Humidity</strong>
@@ -53,29 +64,19 @@
       </div>
       <div class="weatherInfo">
         <div class="day">
-          monday
+          <strong>Clouds</strong>
         </div>
-        <div class="number">
-          pic
-        </div>
-
-
-      </div>
-      <div class="weatherInfo">
-        <div class="day">
-          monday
-        </div>
-        <div class="number">
-          pic
+        <div class="number clouds">
         </div>
 
 
       </div>
+
       <div class="weatherInfo">
         <div class="day">
-          monday
+          <strong>Sunset</strong>
         </div>
-        <div class="number">
+        <div class="number sunset">
           pic
         </div>
 
