adds list of articles on wikipedia to page, creates a link out of the title, emptys div between searches, random button for random wikipedia articles

--- a/wikipedia/index.html
+++ b/wikipedia/index.html
@@ -21,14 +21,14 @@
 
 <body>
   <label for="searchTerm">Search Wikipedia</label>
+
   <input name="search" type="text" id="searchTerm" placeholder="Search...">
   <button id="searchButton">submit</button>
+  <button id="randomArticle" name="button">Random Article</button>
 
   <div id="output">
 
   </div>
-
-
-
+</body>
 
 </html>
