--- a/wikipedia/index.html
+++ b/wikipedia/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="utf-8">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/styles.css">
   <script type="text/javascript" src="js/actions.js"></script>
   <meta name="description" content="FreeCodeCamp Challenge using APIs and Wikipedia">
@@ -20,11 +22,23 @@
 </head>
 
 <body>
-  <label for="searchTerm">Search Wikipedia</label>
+  <header>
+    <div class="searching">
+      <label for="searchTerm">Search Wikipedia</label>
+      <input name="search" type="text" id="searchTerm" placeholder="Search...">
+      <div class="stuff">
 
-  <input name="search" type="text" id="searchTerm" placeholder="Search...">
-  <button id="searchButton">submit</button>
-  <button id="randomArticle" name="button">Random Article</button>
+      </div>
+      <button id="searchButton" class="btn btn-primary">submit</button>
+      <button id="randomArticle" name="button" class="btn btn-danger">Random Article</button>
+    </header>
+    </div>
+
+
+
+
+
+
 
   <div id="output">
 
