--- a/twitch/index.html
+++ b/twitch/index.html
@@ -5,12 +5,13 @@
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="actions.js" type="text/javascript" charset="utf-8"></script>
+  <link rel="stylesheet" href="styles.css">
   <meta charset="utf-8">
   <title>twitch-api freecodecamp challenge</title>
 </head>
 
 <body>
-  <h1>Twitch FreeCodeCamp Challenge</h1>
+  <h2>Twitch FreeCodeCamp Challenge</h2>
   <div id="output">
 
 
