--- a/twitch/index.html
+++ b/twitch/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- jQuery -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   <script src="actions.js" type="text/javascript" charset="utf-8"></script>
   <link rel="stylesheet" href="styles.css">
   <meta charset="utf-8">
@@ -12,6 +13,7 @@
 
 <body>
   <h2>Twitch FreeCodeCamp Challenge</h2>
+  <button type="button" id="live">Live</button>
   <div id="output">
 
 
