--- a/twitch/index.html
+++ b/twitch/index.html
@@ -14,7 +14,7 @@
 <body>
   <h2>Twitch FreeCodeCamp Challenge</h2>
   <button type="button" id="live">Live</button>
-  <div id="output">
+  <div class="output">
 
 
   </div>
