added sytling and finished project

--- a/twitch/index.html
+++ b/twitch/index.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-  <h2>Twitch FreeCodeCamp Challenge</h2>
-  <button type="button" id="live">Live</button>
+  <h1 class="top">Twitch FreeCodeCamp Challenge</h1>
+  <button type="button" id="live">Live Only</button>
   <div class="output">
 
 
